--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
     <main class="main-content">
         <article class="article">
+            <div class="title">
+                <img class="image-title" src="image/logo.png" alt="">
+                <h1 class="site-title">Pizzaria Jobs</h1>
+            </div>
             <div class="info">
                 <h2 class="article-title">Seja bem-vindo(a)!</h2>
                 <p class="article-text">A pizzaria Jobs foi fundada em 14 de dezembro de 2019, com o intuito de mudar 
