--- a/pages/contato.html
+++ b/pages/contato.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/contato.css">
     <title>Contato</title>
 </head>
+
 <body>
     <header class="site-header">
-        <div class="imagens">
-    </div>
-        <nav class="main-nav">
-            <ul class="nav-list">
-                <li class="nav-list"><a href="../index.html" class="nav-link">Home</a></li>
-                <li class="nav-list"><a href="./menu.html" class="nav-link">Menu</a></li>
-                <li class="nav-list"><a href="./contato.html" class="nav-link">Contato</a></li>
-            </ul>
-        </nav>
+        <div class="top">
+            <div class="imagens">
+                <img id="logo-img" src="../image/logo1.png" alt="Logo pizzaria">
+
+            </div>
+            <nav class="main-nav">
+                <ul class="nav-list">
+                    <li class="nav-list"><a href="../index.html" class="nav-link">Home</a></li>
+                    <li class="nav-list"><a href="./menu.html" class="nav-link">Menu</a></li>
+                    <li class="nav-list"><a href="./contato.html" class="nav-link">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 </body>
+
 </html>
