feat: finished title

--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
     <main class="main-content">
         <article class="article">
             <div class="title">
-                <img class="image-title" src="image/logo.png" alt="">
-                <h1 class="site-title">Pizzaria Jobs</h1>
+                <img class="article-image" src="image/logo.png" alt="">
+                <h1 class="article-title">Pizzaria Jobs</h1>
             </div>
+            <section class="article-content"></section>
             <div class="info">
-                <h2 class="article-title">Seja bem-vindo(a)!</h2>
-                <p class="article-text">A pizzaria Jobs foi fundada em 14 de dezembro de 2019, com o intuito de mudar 
+                <h2 class="section">Seja bem-vindo(a)!</h2>
+                <p class="section">A pizzaria Jobs foi fundada em 14 de dezembro de 2019, com o intuito de mudar 
                 e inovar sua experiência na hora de comer uma pizza, e desde então proporcionamos não apenas pizzas de qualidade
                 mas também momentos mágicos, faça seu pedido e mude para sempre sua experiência com a deliciosa massa italiana</p>
             </div>
