--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          </div>
             <nav class="main-nav">
                 <ul class="nav-list">
-                    <li class="nav-list"><a href="../index.html" class="nav-link">Home</a></li>
+                    <li class="nav-list"><a href="./index.html" class="nav-link">Home</a></li>
                     <li class="nav-list"><a href="./menu.html" class="nav-link">Menu</a></li>
                     <li class="nav-list"><a href="./contato.html" class="nav-link">Contato</a></li>
                 </ul>
