feat: atualization home

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <header class="site-header">
         <div class="top">
             <div class="imagens">
-                <img id="logo-img" src="../image/logo1.png" alt="Logo pizzaria">
-         </div>
+                <img id="logo-img" src="./image/logo1-1.jpg" alt="Logo pizzaria">
+            </div>
             <nav class="main-nav">
                 <ul class="nav-list">
                     <li class="nav-list"><a href="./index.html" class="nav-link">Home</a></li>
-                    <li class="nav-list"><a href="./menu.html" class="nav-link">Menu</a></li>
-                    <li class="nav-list"><a href="./contato.html" class="nav-link">Contato</a></li>
+                    <li class="nav-list"><a href="./pages/menu.html" class="nav-link">Menu</a></li>
+                    <li class="nav-list"><a href="./pages/contato.html" class="nav-link">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -30,14 +30,26 @@
                 <img class="article-image" src="image/logo.png" alt="">
                 <h1 class="article-title">Pizzaria Jobs</h1>
             </div>
-            <section class="article-content"></section>
-            <div class="info">
-                <h2 class="article-title">Seja bem-vindo(a)!</h2>
-                <p class="article-text">A pizzaria Jobs foi fundada em 14 de dezembro de 2019, com o intuito de mudar
-                    e inovar sua experiência na hora de comer uma pizza, e desde então proporcionamos não apenas pizzas
-                    de qualidade
-                    mas também momentos mágicos, faça seu pedido e mude para sempre sua experiência com a deliciosa
-                    massa italiana</p>
-            </div>
+            <section class="article-content">
+                <div class="info">
+                    <h2 class="article-title">Seja bem-vindo(a)!</h2>
+                    <p class="article-text">A pizzaria Jobs foi fundada em 14 de dezembro de 2019, com o intuito de
+                        mudar
+                        e inovar sua experiência na hora de comer uma pizza, e desde então proporcionamos não apenas
+                        pizzas
+                        de qualidade
+                        mas também momentos mágicos, faça seu pedido e mude para sempre sua experiência com a deliciosa
+                        massa italiana!</p>
+                </div>
+                <div class="section-image">
+                    <img class="central-image" src="image/frango.png" alt="">
+                    <p class="central-text">Esses e outros deliciosos sabores estão disponíveis em nosso cardápio, <a
+                            href="./pages/menu.html">clique aqui</a> e confira agora
+                        ou vai ficar de fora dessa explosão de sabores</p>
+                </div>
+            </section>
         </article>
     </main>
+</body>
+
+</html>
