feat: finish home

--- a/index.html
+++ b/index.html
@@ -41,11 +41,19 @@
                         mas também momentos mágicos, faça seu pedido e mude para sempre sua experiência com a deliciosa
                         massa italiana!</p>
                 </div>
-                <div class="section-image">
-                    <img class="central-image" src="image/frango.png" alt="">
-                    <p class="central-text">Esses e outros deliciosos sabores estão disponíveis em nosso cardápio, <a
+                <div class="container">
+                    <div class="section-image">
+                        <img class="central-image" src="image/chocolate.png" alt="">
+                        <p class="central-text">EXPLOSÃO DE SABOR<br>esses e outros deliciosos sabores estão disponíveis em nosso cardápio, <a
                             href="./pages/menu.html">clique aqui</a> e confira agora
                         ou vai ficar de fora dessa explosão de sabores</p>
+                </div>
+                <div class="section-image">
+                    <img class="central-image" src="image/frango.png" alt="">
+                    <p class="central-text">DELICIA DE FRANGO <BR>esses e outros deliciosos sabores estão disponíveis em nosso cardápio, <a
+                        href="./pages/menu.html">clique aqui</a> e confira agora
+                    ou vai ficar de fora dessa explosão de sabores</p></BR> 
+            </div>
                 </div>
             </section>
         </article>
