Feat: add footer on index and styles & content in menu

--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
             </section>
         </article>
     </main>
+    <footer class="site-footer">
+        <address class="contact-info">
+        <p class="author-name">Autores: Bernardo Gabriel Marques e João Vitor Porto Sales</p>
+        <p class="author-email"><a href="mailto:bernardo.marques@aluno.senai.br" class="email-link">bernardo.marques@aluno.senai.br</a></p>
+        <p class="author-email"><a href="mailto:joao.v.sales15@aluno.senai.br" class="email-link">joao.v.sales15@aluno.senai.br</a></p>
+        </address>
+        <p class="footer-copy">&copy; 2024 Meu site. Todos os direitos reservados.</p>
+    </footer>
 </body>
 
 </html>
