feat: create items menu

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -12,7 +12,7 @@
     <header class="site-header">
         <div class="top">
             <div class="imagens">
-                <img id="logo-img" src="../image/logo1.png" alt="Logo pizzaria">
+                <img id="logo-img" src="../image/logo1-1.jpg" alt="Logo pizzaria">
 
             </div>
             <nav class="main-nav">
